test/features/errors/semantic/e1039_invalid_visibility.spl
# E1039: Invalid Visibility

Feature: E1039 - Invalid Visibility Qualifier
  As a Simple compiler
  I want to detect visibility qualifiers where not allowed
  So that visibility is used appropriately

  Background:
    Given I have the Simple compiler

  Scenario: Visibility on local variable
    When I compile:
      '''
      fn test():
        pub val x = 10  # Error: pub not allowed on local variable
      '''
    Then I should see error E1039 at line 2
    And the error message should be "visibility qualifier not allowed here"
    And the label should indicate "invalid visibility"
    And the help should suggest "remove the visibility qualifier from this position"

  Scenario: Visibility on function parameter
    When I compile:
      '''
      fn test(pub x: i32):  # Error: pub not allowed on parameter
        print(x)
      '''
    Then I should see error E1039

  Scenario: Visibility on trait items (if not allowed)
    When I compile:
      '''
      trait MyTrait:
        pub fn method()  # Error if pub not allowed in trait
      '''
    Then I should see error E1039 if not supported

  Scenario: Valid visibility on module item
    When I compile:
      '''
      pub struct Point:
        x: i32
        y: i32

      pub fn create() -> Point:
        Point { x: 0, y: 0 }
      '''
    Then compilation should succeed

  Scenario: Valid visibility on struct field
    When I compile:
      '''
      struct Point:
        pub x: i32
        pub y: i32
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        pub val x = 10
      '''
    Then I should see error E1039
    And the error message should contain "잘못된 가시성"
